bug fixed Eliminating Predicates